; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/hisilicon/extr_qm.c_qm_db_v1.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/hisilicon/extr_qm.c_qm_db_v1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.hisi_qm = type { i64 }

@QM_DB_CMD_SHIFT_V1 = common dso_local global i32 0, align 4
@QM_DB_INDEX_SHIFT_V1 = common dso_local global i32 0, align 4
@QM_DB_PRIORITY_SHIFT_V1 = common dso_local global i32 0, align 4
@QM_DOORBELL_BASE_V1 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.hisi_qm*, i32, i64, i32, i64)* @qm_db_v1 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @qm_db_v1(%struct.hisi_qm* %0, i32 %1, i64 %2, i32 %3, i64 %4) #0 {
  %6 = alloca %struct.hisi_qm*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i64, align 8
  %11 = alloca i32, align 4
  store %struct.hisi_qm* %0, %struct.hisi_qm** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i64 %4, i64* %10, align 8
  %12 = load i32, i32* %7, align 4
  %13 = load i64, i64* %8, align 8
  %14 = trunc i64 %13 to i32
  %15 = load i32, i32* @QM_DB_CMD_SHIFT_V1, align 4
  %16 = shl i32 %14, %15
  %17 = or i32 %12, %16
  %18 = load i32, i32* %9, align 4
  %19 = load i32, i32* @QM_DB_INDEX_SHIFT_V1, align 4
  %20 = shl i32 %18, %19
  %21 = or i32 %17, %20
  %22 = load i64, i64* %10, align 8
  %23 = trunc i64 %22 to i32
  %24 = load i32, i32* @QM_DB_PRIORITY_SHIFT_V1, align 4
  %25 = shl i32 %23, %24
  %26 = or i32 %21, %25
  store i32 %26, i32* %11, align 4
  %27 = load i32, i32* %11, align 4
  %28 = load %struct.hisi_qm*, %struct.hisi_qm** %6, align 8
  %29 = getelementptr inbounds %struct.hisi_qm, %struct.hisi_qm* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @QM_DOORBELL_BASE_V1, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @writeq(i32 %27, i64 %32)
  ret void
}

declare dso_local i32 @writeq(i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
